Testing specification for SP800-56Cr2 * new testing for HKDF, OneStepKdf, and TwoStepKdf * Renamed SP800-56Cr1 documents to "SP800-56C", and referenced Cr1 and Cr2 within the document when applicable.   * The testing between Cr1 and Cr2 is *mostly* the same, so rather than create brand new documents, the "C" document now supports both. * https://github.com/usnistgov/ACVP/issues/1095

--- a/src/draft-hammett-acvp-kas-kdf-hkdf.adoc
+++ b/src/draft-hammett-acvp-kas-kdf-hkdf.adoc
@@ -1,13 +1,13 @@
 = ACVP KAS KDF HKDF Specification
 :doctype: internet-draft
-:docname: acvp-kas-kdf-hkdf-sp800-56cr1
-:docnumber: draft-ietf-acvp-sub-kas-kdf-hkdf-sp800-56cr1
+:docname: acvp-kas-kdf-hkdf-sp800-56c
+:docnumber: draft-ietf-acvp-sub-kas-kdf-hkdf-sp800-56c
 :abbrev: ACVP KAS KDF HKDF
 :ipr: trust200902
 :submission-type: independent
 :area: General
 :intended-series: informational
-:revdate: 2020-07-14
+:revdate: 2020-12-11
 :forename_initials: R.H.
 :lastname: Hammett
 :fullname: Russell Hammett
@@ -26,8 +26,8 @@
 :keyword: acvp, crypto
 
 // Singular name of the algorithm
-:spec-algorithm: KAS-KDF-HKDF SP800-56Cr1
-:algo-short-name: KAS-KDF-HKDF SP800-56Cr1
+:spec-algorithm: KAS-KDF-HKDF SP800-56C
+:algo-short-name: KAS-KDF-HKDF SP800-56C
 
 include::common/common-sections/00-abstract.adoc[]
 
@@ -35,21 +35,21 @@ include::common/common-sections/01-intro.adoc[]
 
 include::common/common-sections/02-conventions.adoc[]
 
-include::kas/sp800-56cr1/hkdf/sections/03-supported.adoc[]
+include::kas/sp800-56c/hkdf/sections/03-supported.adoc[]
 
-include::kas/sp800-56cr1/hkdf/sections/04-testtypes.adoc[]
+include::kas/sp800-56c/hkdf/sections/04-testtypes.adoc[]
 
 include::common/common-sections/05-capabilities-description.adoc[]
 
 include::common/common-sections/051-prerequisites.adoc[]
 
-include::kas/sp800-56cr1/hkdf/sections/05-capabilities.adoc[]
+include::kas/sp800-56c/hkdf/sections/05-capabilities.adoc[]
 
 include::common/common-sections/06-test-vector-intro.adoc[]
 
-include::kas/sp800-56cr1/hkdf/sections/06-test-vectors.adoc[]
+include::kas/sp800-56c/hkdf/sections/06-test-vectors.adoc[]
 
-include::kas/sp800-56cr1/hkdf/sections/07-responses.adoc[]
+include::kas/sp800-56c/hkdf/sections/07-responses.adoc[]
 
 include::common/common-sections/10-security.adoc[]
 
@@ -58,4 +58,4 @@ include::common/common-sections/11-iana.adoc[]
 include::common/common-sections/99-acknowledgements.adoc[]
 
 // References must be given before appendixes
-include::kas/sp800-56cr1/hkdf/sections/98-references.adoc[]
+include::kas/sp800-56c/hkdf/sections/98-references.adoc[]
