--- a/src/kas/sp800-56c/hkdf/sections/03-supported.adoc
+++ b/src/kas/sp800-56c/hkdf/sections/03-supported.adoc
@@ -1,7 +1,8 @@
 
 [#supported_algs]
-== Supported KAS-KDF OneStep
+== Supported KAS-KDF HKDF
 
 The following key derivation functions *MAY* be advertised by the ACVP compliant cryptographic module:
 
-* KAS-KDF / TwoStep / SP800-56Cr1
+* KAS-KDF / HKDF / SP800-56Cr1
+* KAS-KDF / HKDF / SP800-56Cr2
