--- a/src/kas/sp800-56c/hkdf/sections/04-testtypes.adoc
+++ b/src/kas/sp800-56c/hkdf/sections/04-testtypes.adoc
@@ -14,11 +14,11 @@ There are two test types for KAS-KDF testing:
 
 === Test Coverage
 
-The tests described in this document have the intention of ensuring an implementation is conformant to <<SP800-56Cr1>>. 
+The tests described in this document have the intention of ensuring an implementation is conformant to <<SP800-56Cr1>> and <<SP800-56Cr2>>. 
 
 ==== Requirements Covered
 
-* SP 800-56Cr1 - 5 Two-Step Key Derivation.  All functionality described in the specification is covered by ACVP testing.
+* SP 800-56C - 5 Two-Step Key Derivation.  HKDF is a subset of the TwoStep derivation function described and is covered by ACVP testing.
 
 ==== Requirements Not Covered
 
