--- a/src/kas/sp800-56c/hkdf/sections/07-responses.adoc
+++ b/src/kas/sp800-56c/hkdf/sections/07-responses.adoc
@@ -32,13 +32,14 @@ The following table describes the JSON object that represents a test case respon
 
 | tcId | The test case identifier | integer
 | testPassed | Was the provided `dkm` valid? Only valid for the "VAL" test type. | boolean
-| dkm | The derived keying material. Provided by the IUT for "AFT" test type test cases. | hex
+| dkm | The derived keying material. Provided by the IUT for "AFT" test type test cases. For single expansion tests. | hex
+| dkms | The derived keying materials. Provided by the IUT for "AFT" test type test cases. For multi expansion groups. | array of hex
 |===
 
 Here is an abbreviated example of the response
 
 === Example Test Vectors Response JSON
-.Example Response JSON
+.Example Response JSON SP800-56Cr1
 [source,json]
 ----
 {
@@ -100,4 +101,79 @@ Here is an abbreviated example of the response
     }
   ]
 }    
+----
+
+.Example Response JSON SP800-56Cr1
+[source,json]
+----
+{
+  "vsId": 0,
+  "algorithm": "KAS-KDF",
+  "mode": "HKDF",
+  "revision": "Sp800-56Cr2",
+  "isSample": true,
+  "testGroups": [
+    {
+      "tgId": 1,
+      "tests": [
+        {
+          "tcId": 1,
+          "dkm": "B23D44EBF223E030508A16CE52ACE3EA9C24155E26748D6EEC9C1886663B91F918DA9B328D39EF656BDEBCB5996F9DF51BC06D146338F5E16CBF4893F104BCAFC704489932912917A4A27A736935B344AE416DD2E033B207595EEBB85486D85902E5297C1156D57FBE3A46867BF4A41FEB066D55F44653C6B19B79EC4053A65C"
+        },
+        {
+          "tcId": 2,
+          "dkm": "D966508D28ADFFCB04B7D97D6B2BBF45264BB508AE5B69C990180E26F2C51B2C24D0591C6860A09792A3C8B8C26D9A58B5962A01BC5BD6E072B99643E106CEE104C6CBFBFD7837A6D5C60770882055AA4E8A076C6EF1ACD78B1EBB25143EA0E151C7C0250EE48FE8F9B5304FE47BB168E6A4D1FEE309A4FDE08DF40A2EC2A46A"
+        }
+      ]
+    },
+    {
+      "tgId": 2,
+      "tests": [
+        {
+          "tcId": 6,
+          "dkms": [
+            "72E5C6A964F4FAEBA65507465ADEBF9E2CD6E7185382DA09B7757040871D6842067F8A88A874D7C0D5A74864C763B2B3D6BABA1F75586C2F155749EF10F83216C4F3AAF72352C071423C3C459841C0FC397599DBB740B564E2C031A09643E802E881FA9759D87DC1BA1A46C62C5E1FC9AD5AA9F541E0A9BE4943851E679419D0",
+            "40A53F75389AD6EFE151CFE466C94D2766443EF7DB5EE93D8A99C41B26C2F37369071A7E1B28C3558CAD2624433E853A521CC74ED53EE8A66C7C829FE6DA0584DB953A8493F33C3DA84E328AE19679C19BAB7EE3ECB75682C7142A3E3B43FABC0C5558E744D102DC193D0BC1EC870ED92F91C68AD8DB5B22D99295DAEF0136F3",
+            "869A46E135AC6035EE870BC88758B22D36363F1A399C5B4199394DB77F760B17CAF950EA7414EB764240B62B5DE6E07DD6F4235698A1AC5925064F7B1D088120DFE5BEF99710BF3AE1A6DDCECBA4A57F6C5C6F6C4120A4CA0F7684FD08E7B7DD481D6B1DB34BC14DC6B224E20466C073CC0FEC9882AB4E7A9B0C815EB6A6BC2E"
+          ]
+        },
+        {
+          "tcId": 7,
+          "dkms": [
+            "EB7921CF24F156755E0221CD56BF49FD786307E6AD0E83D896BAE199DA6CB6E057891E50CFC23EE9066345E8568E2E456A549F2A24DD3D712A936145FB664A0EB21809421B0CB43BE8BE9771123CE255868443B56D17F043363C5CB37472CCAEF07FBD55BEB1F5B3A9BA09F51CFC634E114D83C223B7819A23ACFBD464D94D72",
+            "53EB7064B2D475CCAA88C0153C5B00775E43D6E7D982D8BB24ED0A79FB8482AAA935B4F0086A10D7731057CFB2DB2F14C229AB7A35FFBC1D9821B483D5E1DA241416B43802650456DE4760204A6174D8982358F28C3EF8869258C99B6F65FDE755A37AFF86F2A3EDEEAC256C0E77C9B9479A1B0B7AA2BB6C611D8739959D7C45",
+            "882EA02AE5F9B5CF9061B3173B21881EC9950BEA6CE7F143F490D0FBB1CB7F0212CD573FA74119CFC95597C454E106D77F16A9142EE4D7F7DDE14A03D77AAAABB7945BBD6938C3A7BA9E65E67533AC6185FB3CC6411AE526CA354DA824E3DAC23681EBCE05B9B15DBF8BE6FF458DD108C1CEA2625F505CDB0239B8EB9166E449",
+            "964C0650DD3DB9C9C840329233578660230FEAB39DFD0178B027DB34CA0DE5E8D16A44651CA98E9A9A5366F9E41D29CF49B133688613C35A165655E8ECA7AB00DE95F1C86C0DFB0E2A31D7DDB37EED825152374F93E98CF568292875046BA38864CFCE7DD4930A063E0679A67D45680342B16D95CD18606D04DAFED698F4A648"
+          ]
+        }
+      ]
+    },
+    {
+      "tgId": 201,
+      "tests": [
+        {
+          "tcId": 1001,
+          "testPassed": true
+        },
+        {
+          "tcId": 1002,
+          "testPassed": true
+        }    
+      ]
+    },
+    {
+      "tgId": 202,
+      "tests": [
+        {
+          "tcId": 1006,
+          "testPassed": true
+        },
+        {
+          "tcId": 1007,
+          "testPassed": false
+        }
+      ]
+    }
+  ]
+}
 ----
