--- a/src/kas/sp800-56c/onestep/sections/03-supported.adoc
+++ b/src/kas/sp800-56c/onestep/sections/03-supported.adoc
@@ -1,7 +1,8 @@
 
 [#supported_algs]
-== Supported KAS-KDF HKDF
+== Supported KAS-KDF OneStep
 
 The following key derivation functions *MAY* be advertised by the ACVP compliant cryptographic module:
 
-* KAS-KDF / HKDF / SP800-56Cr1
+* KAS-KDF / OneStep / SP800-56Cr1
+* KAS-KDF / OneStep / SP800-56Cr2
