--- a/src/kas/sp800-56c/onestep/sections/06-test-vectors.adoc
+++ b/src/kas/sp800-56c/onestep/sections/06-test-vectors.adoc
@@ -83,7 +83,7 @@ Fixed information that is included for party U/V for fixed info construction
 [[app-vs-ex]]
 === Example Test Vectors JSON
 
-The following is a example JSON object for KAS-FFC test vectors sent from the ACVP server to the crypto module.
+The following is a example JSON object for KAS-KDF HKDF test vectors sent from the ACVP server to the crypto module.  Note there is no difference in the vector set properties for OneStep testing between <<SP800-56Cr1>> and <<SP800-56Cr2>> aside from the new "t" secondary shared secret that can be used for a <<SP800-56Cr2>> Fixed info pattern (See <<fixedinfopatcon>>).
 
 .Vector Set JSON Example
 [source,json]
