--- a/src/kas/sp800-56c/twostep/sections/03-supported.adoc
+++ b/src/kas/sp800-56c/twostep/sections/03-supported.adoc
@@ -4,4 +4,5 @@
 
 The following key derivation functions *MAY* be advertised by the ACVP compliant cryptographic module:
 
-* KAS-KDF / OneStep / SP800-56Cr1
+* KAS-KDF / TwoStep / SP800-56Cr1
+* KAS-KDF / TwoStep / SP800-56Cr2
