--- a/src/kas/sp800-56c/hkdf/sections/05-capabilities.adoc
+++ b/src/kas/sp800-56c/hkdf/sections/05-capabilities.adoc
@@ -19,6 +19,7 @@ A registration *SHALL* use these properties:
 | macSaltMethods | How the salt is determined (default being all 00s, random being a random salt). | array of string | default, random
 | z | The domain of values representing the min/max lengths of Z the implementation can support. | Domain
 | l | The largest DKM the implementation can produce (up to a max of 2048). | number
+| performMultiExpansionTests | Should multi expansion runs of the KDF be tested (in addition to the single expansion tests)? Only applicable for <<SP800-56Cr2>> | boolean
 |===
 
 [[prereq_algs]]
@@ -67,6 +68,9 @@ algorithmId.
 * l
   ** The length of the derived keying material in bits, *MUST* be represented in 32 bits for ACVP testing.
 
+* t
+  ** A random value used to represent a secondary shared secret. Only applicable to <<SP800-56Cr2>>.
+
 Example (Note that party U is the server in this case "434156536964", party V is the IUT "a1b2c3d4e5"):
 
 * "concatenation" :
@@ -95,7 +99,7 @@ The following hash functions MAY be advertised by an ACVP compliant client under
 
 === Registration Example
 
-.Registration JSON Example
+.Registration JSON Example SP800-56Cr1
 [source,json]
 ----
 {
@@ -103,6 +107,45 @@ The following hash functions MAY be advertised by an ACVP compliant client under
   "mode": "HKDF",
   "revision": "Sp800-56Cr1",
   "fixedInfoPattern": "uPartyInfo||vPartyInfo||l",
+  "encoding": [
+    "concatenation"
+  ],
+  "hmacAlg": [
+    "SHA2-224",
+    "SHA2-256",
+    "SHA2-384",
+    "SHA2-512",
+    "SHA2-512/224",
+    "SHA2-512/256",
+    "SHA3-224",
+    "SHA3-256",
+    "SHA3-384",
+    "SHA3-512"
+  ],
+  "macSaltMethods": [
+    "default",
+    "random"
+  ],
+  "l": 1024,
+  "z": [
+    {
+      "min": 224,
+      "max": 65336,
+      "increment": 8
+    }
+  ]
+}
+----
+
+.Registration JSON Example SP800-56Cr2
+[source,json]
+----
+{
+  "algorithm": "KAS-KDF",
+  "mode": "HKDF",
+  "revision": "Sp800-56Cr2",
+  "fixedInfoPattern": "uPartyInfo||vPartyInfo||t||l",
+  "performMultiExpansionTests": true,
   "encoding": [
     "concatenation"
   ],
