--- a/src/kas/sp800-56c/onestep/sections/05-capabilities.adoc
+++ b/src/kas/sp800-56c/onestep/sections/05-capabilities.adoc
@@ -77,6 +77,9 @@ algorithmId.
 * l
   ** The length of the derived keying material in bits, *MUST* be represented in 32 bits for ACVP testing.
 
+* t
+  ** A random value used to represent a secondary shared secret. Only applicable to <<SP800-56Cr2>>.
+
 Example (Note that party U is the server in this case "434156536964", party V is the IUT "a1b2c3d4e5"):
 
 * "concatenation" :
@@ -89,6 +92,9 @@ Evaluated as:
 === Registration Example
 
 .Registration JSON Example
+
+  Note there is no difference in registration properties for OneStep testing between <<SP800-56Cr1>> and <<SP800-56Cr2>> aside from the new "t" secondary shared secret that can be used for a <<SP800-56Cr2>> Fixed info pattern (See <<fixedinfopatcon>>).
+
 [source,json]
 ----
 {
